Source/Alternet.UI/Native/AuiToolBar.cs

            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern System.IntPtr AuiToolBar_FindTool_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_Clear_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_DestroyTool_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_DestroyToolByIndex_(IntPtr obj, int idx);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_DeleteTool_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_DeleteByIndex_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetToolIndex_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetToolFits_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.RectD AuiToolBar_GetToolRect_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetToolFitsByIndex_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetToolBarFits_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolBitmapSizeInPixels_(IntPtr obj, Alternet.Drawing.SizeI size);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI AuiToolBar_GetToolBitmapSizeInPixels_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetOverflowVisible_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetOverflowVisible_(IntPtr obj, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetGripperVisible_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetGripperVisible_(IntPtr obj, bool visible);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_ToggleTool_(IntPtr obj, int toolId, bool state);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetToolToggled_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetMargins_(IntPtr obj, int left, int right, int top, int bottom);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_EnableTool_(IntPtr obj, int toolId, bool state);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetToolEnabled_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolDropDown_(IntPtr obj, int toolId, bool dropdown);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetToolDropDown_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolBorderPadding_(IntPtr obj, int padding);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetToolBorderPadding_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolTextOrientation_(IntPtr obj, int orientation);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetToolTextOrientation_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolPacking_(IntPtr obj, int packing);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetToolPacking_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolProportion_(IntPtr obj, int toolId, int proportion);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetToolProportion_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolSeparation_(IntPtr obj, int separation);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetToolSeparation_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolSticky_(IntPtr obj, int toolId, bool sticky);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern bool AuiToolBar_GetToolSticky_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string AuiToolBar_GetToolLabel_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolLabel_(IntPtr obj, int toolId, string label);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolBitmap_(IntPtr obj, int toolId, IntPtr bitmapBundle);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string AuiToolBar_GetToolShortHelp_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolShortHelp_(IntPtr obj, int toolId, string helpString);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern string AuiToolBar_GetToolLongHelp_(IntPtr obj, int toolId);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolLongHelp_(IntPtr obj, int toolId, string helpString);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern ulong AuiToolBar_GetToolCount_(IntPtr obj);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetToolMinSize_(IntPtr obj, int tool_id, int width, int height);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern Alternet.Drawing.SizeI AuiToolBar_GetToolMinSize_(IntPtr obj, int tool_id);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern void AuiToolBar_SetAlignment_(IntPtr obj, int tool_id, int l);
            
            [DllImport(NativeModuleName, CallingConvention = CallingConvention.Cdecl)]
            public static extern int AuiToolBar_GetAlignment_(IntPtr obj, int tool_id);
            
        }
    }
}
